Foram adicionados uma nova seção(incompleta) e um footer

--- a/Site Toni/index.html
+++ b/Site Toni/index.html
@@ -35,5 +35,19 @@ Em nosso colégio temos secretárias, diretor, vice-diretor, pedagogas, professo
     </div>
   </section>
 
+  <section class="section2">
+    <div class="section2-container">
+        <h1>Nossos estudantes</h1>
+
+      <div class="column-right">
+        <img src="Imagens/Imagem_escola.png" alt="Foto da frente da Escola Estadual Emílio de Menezes" class="hero-image"/>
+      </div>
+    </div>
+  </section>
+
+<footer>
+  <div class="footer"><img src="Imagens/AluraStart_Logo.png"></div>
+</footer>
+
 </body> 
 </html>
