--- a/Site Toni/index.html
+++ b/Site Toni/index.html
@@ -39,8 +39,17 @@ Em nosso colégio temos secretárias, diretor, vice-diretor, pedagogas, professo
     <div class="section2-container">
         <h1>Nossos estudantes</h1>
 
-      <div class="column-right">
-        <img src="Imagens/Imagem_escola.png" alt="Foto da frente da Escola Estadual Emílio de Menezes" class="hero-image"/>
+      <div class="estudantes-wrapper">
+        <div class="aluno1">
+          <img src="Imagens/Antoniella.png" alt="Foto da estudante Antoniella">
+          
+          <div>
+            <h2>Antoniella</h2>
+            <button class="button is-hollow">instagram</button>
+          </div>
+          
+
+        </div>
       </div>
     </div>
   </section>
