--- a/Site Toni/index.html
+++ b/Site Toni/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" {scroll-behavior: smooth;}>
 <head>
   <meta charset="utf-8">
   <title>Alura start</title>
   <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-</head>
+  </head>
 <body> 
 
   <nav>
@@ -45,7 +45,9 @@ Em nosso colégio temos secretárias, diretor, vice-diretor, pedagogas, professo
           
           <div>
             <h2>Antoniella</h2>
-            <button class="button is-hollow">instagram</button>
+            <a href="https://instagram.com/antoniellaa?igshid=OGQ5ZDc2ODk2ZA==">
+              <button type="button" name="insta">antoniellaa</button>
+          </a>
           </div>
           
 
